Add call button and API endpoint

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -1,6 +1,9 @@
 <html>
+  <head>
+    <link rel="stylesheet" href="popup.css" />
+  </head>
   <body>
-    <h1>Hello Extensions</h1>
+    <button id="callBtn" class="call-btn">Call</button>
     <script src="popup.js"></script>
   </body>
 </html>
