fix extension call POST request

--- a/extension/popup.html
+++ b/extension/popup.html
@@ -3,6 +3,12 @@
     <link rel="stylesheet" href="popup.css" />
   </head>
   <body>
+    <input
+      id="phoneInput"
+      type="tel"
+      placeholder="Enter phone number"
+      class="phone-input"
+    />
     <button id="callBtn" class="call-btn">Call</button>
     <script src="popup.js"></script>
   </body>
